--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -32,6 +32,13 @@
     </nav>
     <main class="">
         <hr class="solid">
+        <div class="container mt-5 mb-5">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="display-3 text-center">Build custom AI chatbots to scale your business</h1>
+                </div>
+            </div>
+        </div>
         <div class="container hero mt-5 mb-5">
             <div class="row">
                 <div class="col-12 col-lg-6 col-xl-5 offset-xl-1">
@@ -47,7 +54,6 @@
                         <img class="device" src="./images/logo.png" width="300vw" height="300vh">
                     </div>
                 </div>
-
             </div>
         </div>
     </main>
@@ -176,5 +182,4 @@
         right: 0;
         margin-right: 1rem;
     }
-    
 </style>
