--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Arc Project</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script src="https://kit.fontawesome.com/c03ec31dc2.js" crossorigin="anonymous"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+    <link rel="icon" href="./images/favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
@@ -31,15 +33,28 @@
         </div>
     </nav>
     <main class="">
+
         <hr class="solid">
         <div class="container mt-5 mb-5">
-            <div class="row">
-                <div class="col-12">
-                    <h1 class="display-3 text-center">Build custom AI chatbots to scale your business</h1>
-                </div>
+            <div class="row" style="justify-content: center;"">
+                <div class=" col-12">
+                <h1 class=" display-3 text-center">Chatbots de IA personalizados para expandir o alcance do seu
+                    negócio</h1>
+            </div>
+            <div class="col-12 text-center" style="width: 75%;">
+                <h4 class="mt-4 mb-5">
+                    <small class="text-muted">Potencialize o potencial do seu negócio com chatbots personalizados.
+                        Automatize interações, aumente o engajamento do cliente e libere tempo para se concentrar no
+                        crescimento.
+                        Experimente hoje mesmo e descubra como a nossa solução pode transformar a sua empresa.
+                    </small>
+                </h4>
+                <button type="button mt-5" class="btn btn-outline-info btn-lg">Quero ser cliente</button>
             </div>
         </div>
-        <div class="container hero mt-5 mb-5">
+        <hr class="solid mt-5">
+        </div>
+        <div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-12 col-lg-6 col-xl-5 offset-xl-1">
                     <h1 class="display-3">NecoArc</h1>
@@ -47,29 +62,93 @@
                             Conveniently</i> ou somente NecoArc é um sistema de automatização,
                         envio em agendamento ou resposta automática para mensagens em WhatsApp.
                         Simplificando, é uma plataforma para criação e gestão facilitada de chatbots para
-                        seu negócio ou vida pessoal!<br></p>
+                        seu negócio ou vida pessoal!<br>
+                    </p>
                 </div>
-                <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block">
+
+
+                <div class="col-md-6 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block">
                     <div class="float-end">
-                        <img class="device" src="./images/logo.png" width="300vw" height="300vh">
+                        <img class="profileIcon" src="./images/chatting.svg" style="height: 23rem;">
+                        <!-- <img class="device" src="./images/logo.png" width="300vw" height="300vh"> -->
                     </div>
                 </div>
             </div>
         </div>
+        <div class="container mt-5 mb-5 d-flex justify-content-around">
+            <div class="row">
+                <div class="col-4">
+                    <div class="" data-uanim-scroll-animation="uanim_fade_in_tl" data-uanim-scroll-duration="300"
+                        style="opacity: 0.689;">
+                        <div class="card-container text-center ">
+                            <div class="service-icon">
+                                <picture>
+                                    <i class="fa fa-gamepad custom-fa fa-5x" aria-hidden="true"></i>
+                                </picture>
+                            </div>
+                            <h4>Conhecimento especializado</h3>
+                                <p>Desde 2011, temos implementado milhares de canais de mensagens para clientes e temos
+                                    visto uma grande variedade de configurações e casos de uso.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="" data-uanim-scroll-animation="uanim_fade_in_tl" data-uanim-scroll-duration="300"
+                        style="opacity: 0.689;">
+                        <div class="card-container text-center ">
+                            <div class="service-icon">
+                                <picture>
+                                    <source type="image/webp"
+                                        srcset="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.webp 1x, //userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon@2x.webp 2x">
+                                    <source type="image/png"
+                                        srcset="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.png 1x, //userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon@2x.png 2x">
+                                    <img src="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.png"
+                                        alt="Um ícone de círculo de pontos conectados, simbolizando a estreita cooperação.">
+                                </picture>
+                            </div>
+                            <h4>Conhecimento especializado</h3>
+                                <p>Desde 2011, temos implementado milhares de canais de mensagens para clientes e temos
+                                    visto uma grande variedade de configurações e casos de uso.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="" data-uanim-scroll-animation="uanim_fade_in_tl" data-uanim-scroll-duration="300"
+                        style="opacity: 0.689;">
+                        <div class="card-container text-center ">
+                            <div class="service-icon">
+                                <picture>
+                                    <source type="image/webp"
+                                        srcset="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.webp 1x, //userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon@2x.webp 2x">
+                                    <source type="image/png"
+                                        srcset="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.png 1x, //userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon@2x.png 2x">
+                                    <img src="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.png"
+                                        alt="Um ícone de círculo de pontos conectados, simbolizando a estreita cooperação.">
+                                </picture>
+                            </div>
+                            <h4>Conhecimento especializado</h3>
+                                <p>Desde 2011, temos implementado milhares de canais de mensagens para clientes e temos
+                                    visto uma grande variedade de configurações e casos de uso.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
 
     <!-- Site footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <hr class="solid mt-5">
         <div class="container">
         </div>
         <div class="container">
             <div class="col-12 row">
-                <ul class="social-icons col-12">
-                    <!-- <li><a href="https://github.com/AlmiranteFuchs/Casioh"><i class="fab fa-github"></i></a></li> -->
-                    <li><a href="https://wa.me/5541936180244"><i class="fab fa-whatsapp"></i></a></li>
+                <ul class="social-icons col-12"> -->
+    <!-- <li><a href="https://github.com/AlmiranteFuchs/Casioh"><i class="fab fa-github"></i></a></li> -->
+    <!-- <li><a href="https://wa.me/5541936180244"><i class="fab fa-whatsapp"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/bruno-fuchs-45a4901b5/"><i class="fab fa-linkedin"></i></a>
                     </li>
                     <li><a href="https://www.inf.ufpr.br/bfss21/"><i class="fas fa-globe"></i></a></li>
@@ -81,12 +160,14 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/dddbf2af22.js" crossorigin="anonymous"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
     <script>
@@ -181,5 +262,16 @@
         position: absolute;
         right: 0;
         margin-right: 1rem;
+    }
+
+    .fa.fa-gamepad {
+        color: transparent;
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: red;
+    }
+
+    .fa.custom-fa {
+        -webkit-text-stroke-color: #0dcaf0;
+        color: transparent;
     }
 </style>
