--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Arc Project</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link type="text/css" rel="stylesheet" href="/css/style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -16,7 +16,13 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand align-middle" href="/"> Arc </a>
+
+            <a class="navbar-brand align-middle" href="/">
+                <picture>
+                    <img src="/images/favicon-32x32.png" alt="">
+                </picture> Arc
+            </a>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -26,22 +32,21 @@
                         <a class="nav-link active" href="/status">Status</a>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="btn btn-outline-info">Log in</button>
+
                     </li>
                 </ul>
+                <button type="button" class="btn btn-outline-info">Entrar</button>
             </div>
         </div>
     </nav>
     <main class="">
-
-        <hr class="solid">
-        <div class="container mt-5 mb-5">
+        <div class="container mt-5 mb-5 pt-5">
             <div class="row" style="justify-content: center;"">
                 <div class=" col-12">
                 <h1 class=" display-3 text-center">Chatbots de IA personalizados para expandir o alcance do seu
                     negócio</h1>
             </div>
-            <div class="col-12 text-center" style="width: 75%;">
+            <div class="col-12 text-center pb-5" style="width: 75%;">
                 <h4 class="mt-4 mb-5">
                     <small class="text-muted">Potencialize o potencial do seu negócio com chatbots personalizados.
                         Automatize interações, aumente o engajamento do cliente e libere tempo para se concentrar no
@@ -54,7 +59,7 @@
         </div>
         <hr class="solid mt-5">
         </div>
-        <div class="container mt-5 mb-5">
+        <div class="container mt-5 mb-5 pt-5 pb-5">
             <div class="row">
                 <div class="col-12 col-lg-6 col-xl-5 offset-xl-1">
                     <h1 class="display-3">NecoArc</h1>
@@ -77,91 +82,83 @@
         </div>
         <div class="container mt-5 mb-5 d-flex justify-content-around">
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12 mb-5">
                     <div class="" data-uanim-scroll-animation="uanim_fade_in_tl" data-uanim-scroll-duration="300"
                         style="opacity: 0.689;">
                         <div class="card-container text-center ">
-                            <div class="service-icon">
+                            <div class="service-icon mb-4">
                                 <picture>
-                                    <i class="fa fa-gamepad custom-fa fa-5x" aria-hidden="true"></i>
+                                    <i class="fa fa-gamepad fa-outline custom-fa fa-5x" aria-hidden="true"></i>
                                 </picture>
                             </div>
-                            <h4>Conhecimento especializado</h3>
-                                <p>Desde 2011, temos implementado milhares de canais de mensagens para clientes e temos
-                                    visto uma grande variedade de configurações e casos de uso.</p>
+                            <h4>Você no controle</h3>
+                                <p>Explore uma interface intuitiva e fácil de usar, onde você pode personalizar e
+                                    ajustar seu chatbot conforme suas necessidades.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12 mb-5">
                     <div class="" data-uanim-scroll-animation="uanim_fade_in_tl" data-uanim-scroll-duration="300"
                         style="opacity: 0.689;">
                         <div class="card-container text-center ">
-                            <div class="service-icon">
+                            <div class="service-icon mb-4">
                                 <picture>
-                                    <source type="image/webp"
-                                        srcset="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.webp 1x, //userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon@2x.webp 2x">
-                                    <source type="image/png"
-                                        srcset="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.png 1x, //userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon@2x.png 2x">
-                                    <img src="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.png"
-                                        alt="Um ícone de círculo de pontos conectados, simbolizando a estreita cooperação.">
+                                    <i class="fa fa-cart-plus fa-outline custom-fa fa-5x" aria-hidden="true"></i>
                                 </picture>
                             </div>
-                            <h4>Conhecimento especializado</h3>
-                                <p>Desde 2011, temos implementado milhares de canais de mensagens para clientes e temos
-                                    visto uma grande variedade de configurações e casos de uso.</p>
+                            <h4>Agilize vendas</h3>
+                                <p>Envie cardápios, detalhes de produtos e todas informações de venda de forma
+                                    automatizada, libere sua equipe de tarefas repetitivas e concentre-se no crescimento
+                                    do seu negócio.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12 mb-5">
                     <div class="" data-uanim-scroll-animation="uanim_fade_in_tl" data-uanim-scroll-duration="300"
                         style="opacity: 0.689;">
                         <div class="card-container text-center ">
-                            <div class="service-icon">
+                            <div class="service-icon mb-4">
                                 <picture>
-                                    <source type="image/webp"
-                                        srcset="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.webp 1x, //userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon@2x.webp 2x">
-                                    <source type="image/png"
-                                        srcset="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.png 1x, //userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon@2x.png 2x">
-                                    <img src="//userlike-cdn-web.b-cdn.net/static/web/images/product/pages/enterprise/how_we_work_close_connection_icon.png"
-                                        alt="Um ícone de círculo de pontos conectados, simbolizando a estreita cooperação.">
+                                    <i class="fa fa-usd fa-outline custom-fa fa-5x" aria-hidden="true"></i>
                                 </picture>
                             </div>
-                            <h4>Conhecimento especializado</h3>
-                                <p>Desde 2011, temos implementado milhares de canais de mensagens para clientes e temos
-                                    visto uma grande variedade de configurações e casos de uso.</p>
+                            <h4>Soluções acessíveis</h3>
+                                <p>Conquiste seus objetivos sem comprometer seu orçamento. Descubra nossas opções de
+                                    preços acessíveis e alcance o sucesso sem pesar no bolso.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+
+
+
+        <!-- Site footer -->
+        <footer class="footer">
+            <hr class="solid mt-5">
+            <div class="container">
+            </div>
+            <div class="container">
+                <div class="col-12 row">
+                    <ul class="social-icons col-12">
+                        <!-- <li><a href="https://github.com/AlmiranteFuchs/Casioh"><i class="fab fa-github"></i></a></li> -->
+                        <li><a href="https://wa.me/5541936180244"><i class="fab fa-whatsapp"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/bruno-fuchs-45a4901b5/"><i
+                                    class="fab fa-linkedin"></i></a>
+                        </li>
+                        <li><a href="https://www.inf.ufpr.br/bfss21/"><i class="fas fa-globe"></i></a></li>
+                    </ul>
+                    <div class="row">
+                        <span class="col-12 mt-2 text-muted">Copyright &copy; 2022 All Rights Reserved by
+                            <a href="https://www.inf.ufpr.br/bfss21/">Fuchs</a>.
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     </main>
-
-
-
-    <!-- Site footer -->
-    <!-- <footer class="footer">
-        <hr class="solid mt-5">
-        <div class="container">
-        </div>
-        <div class="container">
-            <div class="col-12 row">
-                <ul class="social-icons col-12"> -->
-    <!-- <li><a href="https://github.com/AlmiranteFuchs/Casioh"><i class="fab fa-github"></i></a></li> -->
-    <!-- <li><a href="https://wa.me/5541936180244"><i class="fab fa-whatsapp"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/bruno-fuchs-45a4901b5/"><i class="fab fa-linkedin"></i></a>
-                    </li>
-                    <li><a href="https://www.inf.ufpr.br/bfss21/"><i class="fas fa-globe"></i></a></li>
-                </ul>
-                <div class="row">
-                    <span class="col-12 mt-2 text-muted">Copyright &copy; 2022 All Rights Reserved by
-                        <a href="https://www.inf.ufpr.br/bfss21/">Fuchs</a>.
-                    </span>
-                </div>
-            </div>
-        </div>
-    </footer> -->
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -250,28 +247,10 @@
     }
 
     .footer {
-        position: absolute;
         right: 0;
         bottom: 0;
         left: 0;
         padding: 1rem;
         text-align: center;
-    }
-
-    li:last-of-type {
-        position: absolute;
-        right: 0;
-        margin-right: 1rem;
-    }
-
-    .fa.fa-gamepad {
-        color: transparent;
-        -webkit-text-stroke-width: 2px;
-        -webkit-text-stroke-color: red;
-    }
-
-    .fa.custom-fa {
-        -webkit-text-stroke-color: #0dcaf0;
-        color: transparent;
     }
 </style>
