chore menu & space

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -175,13 +175,6 @@
         crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-    <script>
-        function addDarkmodeWidget() {
-            new Darkmode().showWidget();
-        }
-        window.addEventListener('load', addDarkmodeWidget);
-    </script>
-
 </body>
 
 </html>
@@ -196,7 +189,7 @@
     }
 
     body {
-        background-color: #EEE5E9;
+        background-color: #FFFFFF;
     }
 
     hr.solid {
