--- a/src/views/message_tree.ejs
+++ b/src/views/message_tree.ejs
@@ -12,6 +12,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leader-line/1.0.3/leader-line.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/dddbf2af22.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/dddbf2af22.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,10 +43,22 @@
                 <a href="/coldfusion/">ColdFusion</a>
                 <a href="/database/">Database</a>
             </nav>
-            <a id="start" class="btn btn-sm btn-pill  controll-pill" href="#">Estado inicial</a>
-            <div class="controll-pill">
-                <a id="end" class="btn btn-sm btn-pill" href="#"><span class="mr-5">Estado inicial</span></a>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            <div id="initial-state" class="controll-pill">
+                <div class="btn-group">
+                    <button id="end" class="btn btn-sm btn-pill" type="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false" style="pointer-events: none;">
+                        Estado inicial
+                    </button>
+                    <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                        style="border-radius: 0px 25px 25px 0px;">
+                        <i class="fa fa-plus-circle"></i>
+
+                    </button>
+                    <div class="dropdown-menu">
+                        ...
+                    </div>
+                </div>
             </div>
         </div>
         <!-- <button type="button" class="btn btn-outline-info button-pill">Info</button> -->
@@ -59,19 +84,19 @@
 
         });
 
-        const line = new LeaderLine(
-            document.getElementById('start'),
-            document.getElementById('end'), {
-            startPlug: 'behind',
-            endPlug: 'behind',
-            color: '#0F78A9',
-            size: 2,
-            dash: { animation: true },
-            // if overflow is true, the line will be extended to the edge of the container
-            // overflow: true,
+        // const line = new LeaderLine(
+        //     document.getElementById('start'),
+        //     document.getElementById('end'), {
+        //     startPlug: 'behind',
+        //     endPlug: 'behind',
+        //     color: '#0F78A9',
+        //     size: 2,
+        //     dash: { animation: true },
+        //     // if overflow is true, the line will be extended to the edge of the container
+        //     // overflow: true,
 
-        }
-        );
+        // }
+        // );
 
         function updateLine() {
             line.position();
@@ -87,6 +112,10 @@
         document.querySelector('.container-grid').addEventListener('scroll', function () {
             line.position();
         });
+
+        // tranlsate initial-state to middle of the screen height
+        const initial = document.getElementById('initial-state');
+        initial.style.transform = `translateY(${window.innerHeight / 2.5}px)`;
 
 
     });
@@ -113,6 +142,15 @@
         z-index: 100;
         position: fixed;
     }
+
+    .fa-plus-circle {
+        color: white;
+    }
+
+    .dropdown-toggle::after {
+        display: none;
+    }
+
 
     .btn {
         background-color: #486b7a;
